@@ -1,5 +1,6 @@
 package io.repoOne.moduleOne;
 
+import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -8,17 +9,15 @@ public class Main {
 
   public static void main(String[] args) throws MalformedURLException {
     System.out.println("Loading jar...");
-    URLClassLoader loader = new URLClassLoader(
-        new URL[] {new URL("file://C:/Users/m.gigena/.m2/repository/io/repoOne/moduleTwo/1.0-SNAPSHOT/moduleTwo-1.0-SNAPSHOT.jar")},
-        Thread.currentThread().getContextClassLoader());
+    File f = new File(System.getProperty("targetjar.path"));
+    URLClassLoader loader = new URLClassLoader(new URL[] {f.toURI().toURL()}, System.class.getClassLoader());
     for (URL it : loader.getURLs()) {
       System.out.println(it.toString());
     }
     try {
-      Class clazz = Class.forName("io.repoOne.moduleTwo.BasePage", true, loader);
+      Class<?> clazz = Class.forName("io.repoTwo.HomePage", true, loader);
       System.out.println(clazz.getName());
     } catch (ClassNotFoundException e) {
-      // TODO Auto-generated catch block
       e.printStackTrace();
     }
   }
